--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.4.10",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-big-calendar": "^1.8.1",
     "react-chartjs-2": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
