--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@ant-design/icons": "latest",
+    "antd": "5.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
